applications/demoapp-01/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp01-ingress
  annotations:
spec:
  rules:
  - host: "demoapp01.app.cision.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp01-service
            port:
              number: 80
  ingressClassName: nginx
